Changes from 1.11 to 1.12
ForgeRegistries.ITEMS, ForgeRegistries.BLCCKS etc instead of GameRegistry.register

Changes from 1.10.2 to 1.11

A major change is that itemStacks can't be null anymore, the EMPTY item is used instead.  i.e.
When the player's hand is empty, the ItemStack is no longer null.  instead, the itemStack.isEmpty() returns true.
An empty ItemStack is ItemStack.EMPTY - use this instead of Null for ItemStacks.

Block.getCollisionBoundingBox has changed signature to use IBlockAccess instead of World.  IBlockAccess is used for
   methods which are called by multithreaded access, typically chunk rendering (compiling rendering lists)
   or AI (entity decision logic)
Block.getSubBlocks() signature change to use NonNullList
CreativeTabs.displayAllRelevantItems signature change to use NonNullList
Item.onItemRightClick: signature change.  get ItemStackIn from playerIn.getHeldItem(hand);
Block.onBlockActivated : signature change.  get held ItemStack from playerIn.getHeldItem(hand);
Item.onItemRightClick() and .onItemUse(): signature change.  get ItemStackIn from playerIn.getHeldItem(hand);
ItemStack stacksize is now private.  Access through:
   getter: getCount()
   setter: setCount()
   grow(int i) : increase stacksize by i
   shrink(int i) : decrease stacksize by i
An empty ItemStack is ItemStack.EMPTY - use this instead of Null for ItemStacks
ItemStack.loadItemStackFromNBT() has been changed to a constructor instead

Slot.onPickupFromSlot has changed to onTake()

Blocks, Items, and Model Registry
https://github.com/LexManos/VoidUtils/blob/master/src/main/java/net/minecraftforge/lex/voidutils/VoidUtils.java
Block.neighborChanged() now has extra BlockPos for the neighbor block

Changes from 1.8.9 to 1.10.2

EntityPlayerMP.theItemInWorldManager -> EntityPlayerMP.interactionManager
BlockRenderLayer -> BlockRenderLayer
GameRegistry.findItem -> Item.REGISTRY.getObject(new ResourceLocation(...))
Material.rock etc have new names