@@ -29,7 +29,7 @@ public class ClientOnlyProxy extends CommonProxy
 //    minecraftbyexample.mbe06_redstone.StartupClientOnly.preInitClientOnly();
     minecraftbyexample.mbe08_creative_tab.StartupClientOnly.preInitClientOnly();
     minecraftbyexample.mbe10_item_simple.StartupClientOnly.preInitClientOnly();
-//    minecraftbyexample.mbe11_item_variants.StartupClientOnly.preInitClientOnly();
+    minecraftbyexample.mbe11_item_variants.StartupClientOnly.preInitClientOnly();
 //    minecraftbyexample.mbe12_item_nbt_animate.StartupClientOnly.preInitClientOnly();
 //    minecraftbyexample.mbe13_item_tools.StartupClientOnly.preInitClientOnly();
 //    minecraftbyexample.mbe15_item_dynamic_item_model.StartupClientOnly.preInitClientOnly();
@@ -62,7 +62,7 @@ public class ClientOnlyProxy extends CommonProxy
 //    minecraftbyexample.mbe06_redstone.StartupClientOnly.initClientOnly();
     minecraftbyexample.mbe08_creative_tab.StartupClientOnly.initClientOnly();
     minecraftbyexample.mbe10_item_simple.StartupClientOnly.initClientOnly();
-//    minecraftbyexample.mbe11_item_variants.StartupClientOnly.initClientOnly();
+    minecraftbyexample.mbe11_item_variants.StartupClientOnly.initClientOnly();
 //    minecraftbyexample.mbe12_item_nbt_animate.StartupClientOnly.initClientOnly();
 //    minecraftbyexample.mbe13_item_tools.StartupClientOnly.initClientOnly();
 //    minecraftbyexample.mbe15_item_dynamic_item_model.StartupClientOnly.initClientOnly();
@@ -94,7 +94,7 @@ public class ClientOnlyProxy extends CommonProxy
 //    minecraftbyexample.mbe06_redstone.StartupClientOnly.postInitClientOnly();
     minecraftbyexample.mbe08_creative_tab.StartupClientOnly.postInitClientOnly();
     minecraftbyexample.mbe10_item_simple.StartupClientOnly.postInitClientOnly();
-//    minecraftbyexample.mbe11_item_variants.StartupClientOnly.postInitClientOnly();
+    minecraftbyexample.mbe11_item_variants.StartupClientOnly.postInitClientOnly();
 //    minecraftbyexample.mbe12_item_nbt_animate.StartupClientOnly.postInitClientOnly();
 //    minecraftbyexample.mbe13_item_tools.StartupClientOnly.postInitClientOnly();
 //    minecraftbyexample.mbe15_item_dynamic_item_model.StartupClientOnly.postInitClientOnly();
